Done store task, edit task, delete task and update status

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -15,5 +15,23 @@
     "click here to request another":"clique aqui para solicitar outro",
     "Before proceeding, please check your email for a verification link.":"Antes de prosseguir, verifique seu e-mail para obter um link de verificação.",
     "If you did not receive the email":"Se você não recebeu o e-mail",
-    "Logout":"Sair"
+    "Logout":"Sair",
+    "Tasks":"Tarefas",
+    "Title":"Título",
+    "Status":"Status",
+    "Action":"Ação",
+    "New Task":"Adicionar Tarefa",
+    "Description":"Descrição",
+    "Save":"Salvar",
+    "Close":"Cancelar",
+    "Task added with success":"Tarefa adicionada com sucesso",
+    "Task updated with success":"Tarefa atualizada com sucesso",
+    "Edit Task":"Editar Tarefa",
+    "Delete Task":"Excluir Tarefa",
+    "Set Done Task":"Marcar Tarefa como concluída",
+    "Unset Done Task":"Marcar Tarefa como não concluída",
+    "Done Date":"Data de conclusão",
+    "Task deleted with success":"Tarefa deletada com sucesso",
+    "Delete":"Excluir",
+    "Pay Attention, after click in Delete, it is not possible to recover":"Atenção, após clicar em Excluir, não é possível recuperar"
 }
