improved code, added button to filter tasks

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -33,5 +33,8 @@
     "Done Date":"Data de conclusão",
     "Task deleted with success":"Tarefa deletada com sucesso",
     "Delete":"Excluir",
-    "Pay Attention, after click in Delete, it is not possible to recover":"Atenção, após clicar em Excluir, não é possível recuperar"
+    "Pay Attention, after click in Delete, it is not possible to recover":"Atenção, após clicar em Excluir, não é possível recuperar",
+    "Tasks Created":"Tarefas Criadas",
+    "Tasks Done":"Tarefas Concluídas",
+    "Tasks Not Done":"Tarefas Não Concluída"
 }
