improved code, added files and readme

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -166,5 +166,6 @@
   "Pay Attention, after click in Delete, it is not possible to recover":"Atenção, após clicar em Excluir, não é possível recuperar",
   "Tasks Created":"Tarefas Criadas",
   "Tasks Done":"Tarefas Concluídas",
-  "Tasks Not Done":"Tarefas Não Concluída"
+  "Tasks Not Done":"Tarefas Não Concluída",
+  "All Tasks":"Todas Tarefas"
 }
